...
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="activity_location_found">Location found</string>
    <string name="action_location_found">Location found</string>
    <string name="search_hint">search hint</string>
    <string name="action_send">Send</string>
    <string name="action_sortby">Sort by</string>
    <string name="action_save">Save</string>
    <string name="action_group">Group cards</string>
    <string name="action_new">New</string>
    <string name="action_accept">Accept</string>
    <string name="action_share">Share</string>
    <string name="action_shake">Shake</string>
    <string name="action_beam">Beam</string>
    <string name="action_person">Sign in</string>
    <string name="activity_nfc">NFC</string>
...
    
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    
    <string name="Add_New">Add new</string>
   <string name="action_edit">Edit</string>
   <string name="action_delete">Delete</string>
   <string name="title_activity_display_contact">DisplayContact</string>
   <string name="title_activity_new_contact">NewContact</string>
   <string name="title_activity_display_cards">DisplayCards</string>
   <string name="title_activity_display_card">DisplayCard</string>
   <string name="title_activity_edit_card">EditCard</string>
   
   <string name="create_new_group">Create new group</string>
   <string name="text_new_group">New group</string>
   
   <string name="button_help">Help</string>
   <string name="button_account">Account</string>
   <string name="button_notifications">Notifications</string>
   <string name="button_to_upload">How to upload</string>
...
   <string name="are_you_sure_delete_card">Are you sure, you want to delete the card(s) selected.</string>
   <string name="dont_group_cards">Are you sure, you do not want to group any card.</string>
   <string name="are_you_sure_delete_group">Are you sure, you want to delete the group(s) selected.</string>
   <string name="delete_groups">Delete group(s)</string>
   <string name="select_all_groups">Select all groups</string>
   
   <string name="yes">Yes</string>
   <string name="no">No</string>
   <string name="cancel">Cancel</string>
   <string name="ok">Ok</string>
   
   <string name="add_to_group">Add to group</string>
   <string name="rename_group">Rename group</string>
   <string name="delete_success">Deleted successfully</string>
   <string name="groups_deleted">group(s) deleted</string>
   
...
   
   
   <string name="text_edit">Edit</string>   
   <string name="text_add">Add</string>
   <string name="text_share">Share</string>
   <string name="text_delete">Delete</string>
   <string name="text_group">Group</string>
   
   <string name="text_share_card_to">Share card(s) to..</string>
   <string name="text_share_group_to">Share group to..</string>
   <string name="text_share_group">Share group</string>
   
   <string name="text_group_exist">Group XXX already exists</string>
...
        <item>All cards</item>
        <item>Groups</item>
    </string-array>
    
    <string-array name="sort_by_opt">
        <item>Name</item>
        <item>Date modified</item>
    </string-array>
    
    <string-array name="repeat_group_opt">
        <item>Combine group</item>
        <item>Rename group</item>
    </string-array>
...
