...
  	   <LinearLayout
      android:id="@+id/Main2"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">
      <Button
	        android:id="@+id/button4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/input_showSignIn"
	        android:onClick="ShowSignInOnClick" />
      <Button
	        android:id="@+id/button5"
...
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/input_name"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/et_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName" >
	        <requestFocus />
	    </EditText>
...
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/input_lastName"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/et_lastName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/input_email"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/et_email"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textEmailAddress" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/input_password"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/et_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword" />
	
	    <Button
	        android:id="@+id/button1"
	        android:onClick="SaveOnClick"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/input_save" />
	
	    <Button
...
